src/objects/AcctSeed__Financial_Report_Result_Value__c.object
<CustomObject>
    <description>Captures information related to the execution of a financial report definition. These records contain actual report related data and report formatting options.</description>
    <fields>
        <fullName>AcctSeed__Column_Header_1__c</fullName>
        <label>Column Header 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Column_Header_2__c</fullName>
        <label>Column Header 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Column_Override_Row__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Column Override Row</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Column_Position__c</fullName>
        <label>Column Position</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Column_Type__c</fullName>
        <label>Column Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Current Period</fullName>
                </value>
                <value>
                    <fullName>Year To Date</fullName>
                </value>
                <value>
                    <fullName>Calculation Number</fullName>
                </value>
                <value>
                    <fullName>Calculation %</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AcctSeed__Currency_Value__c</fullName>
        <label>Currency Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Financial_Report_Column__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Financial Statement Column</label>
        <referenceTo>AcctSeed__Financial_Report_Column__c</referenceTo>
        <relationshipLabel>Financial Report Result Value</relationshipLabel>
        <relationshipName>Financial_Report_Result_Value</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Financial_Report_Result__c</fullName>
        <label>Financial Statement Result</label>
        <referenceTo>AcctSeed__Financial_Report_Result__c</referenceTo>
        <relationshipLabel>Financial Statement Result Value</relationshipLabel>
        <relationshipName>Financial_Report_Result_Value</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Financial_Report_Row__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Financial Statement Row</label>
        <referenceTo>AcctSeed__Financial_Report_Row__c</referenceTo>
        <relationshipLabel>Financial Report Result Value</relationshipLabel>
        <relationshipName>Financial_Report_Result_Value</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Indent__c</fullName>
        <label>Indent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Number_Value__c</fullName>
        <label>Number Value</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Period__c</fullName>
        <label>Period</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Row_Label__c</fullName>
        <label>Row Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Row_Position__c</fullName>
        <label>Row Position</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Row_Type__c</fullName>
        <label>Row Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GL Account</fullName>
                </value>
                <value>
                    <fullName>Reporting Group</fullName>
                </value>
                <value>
                    <fullName>Description</fullName>
                </value>
                <value>
                    <fullName>Blank</fullName>
                </value>
                <value>
                    <fullName>Calculation Number</fullName>
                </value>
                <value>
                    <fullName>Calculation %</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AcctSeed__Suppress_Cell_Hyperlink__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field gives an ability to suppress drill down hyperlink on the Financial Report&apos;s view screen.</description>
        <inlineHelpText>Disable drill down hyperlink for the cell.</inlineHelpText>
        <label>Suppress Cell Hyperlink</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Suppress_Print__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Suppress Print</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Text_Value__c</fullName>
        <label>Text Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Underline__c</fullName>
        <label>Underline</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Financial Statement Result Value</label>
    <nameField>
        <displayFormat>FRV-{00000}</displayFormat>
        <label>Financial Statement Result Value Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Financial Statement Result Value</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>